--- a/PORT.KF5/googledrive/CMakeLists.txt
+++ b/PORT.KF5/googledrive/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(kipiplugin_googledrive
                       KF5kipiplugins
                      )
 
-configure_file(kipiplugin_googledrive.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_googledrive.desktop)
+configure_file(kipiplugin_googledrive.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_googledrive.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_googledrive.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_googledrive                                     DESTINATION ${PLUGIN_INSTALL_DIR})
