--- a/PORT.KF5/advancedslideshow/CMakeLists.txt
+++ b/PORT.KF5/advancedslideshow/CMakeLists.txt
@@ -58,7 +58,7 @@ target_link_libraries(kipiplugin_advancedslideshow
                       KF5kipiplugins
                      )
 
-configure_file(plugin/kipiplugin_advancedslideshow.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_advancedslideshow.desktop)
+configure_file(plugin/kipiplugin_advancedslideshow.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_advancedslideshow.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_advancedslideshow.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_advancedslideshow                                            DESTINATION ${PLUGIN_INSTALL_DIR})
