--- a/PORT.KF5/calendar/CMakeLists.txt
+++ b/PORT.KF5/calendar/CMakeLists.txt
@@ -39,7 +39,7 @@ target_link_libraries(kipiplugin_calendar
                       KF5kipiplugins
                      )
 
-configure_file(plugin/kipiplugin_calendar.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_calendar.desktop)
+configure_file(plugin/kipiplugin_calendar.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_calendar.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_calendar.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_calendar                                            DESTINATION ${PLUGIN_INSTALL_DIR})
