--- a/PORT.KF5/facebook/CMakeLists.txt
+++ b/PORT.KF5/facebook/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(kipiplugin_facebook
                       ${QJSON_LIBRARIES}
                      )
 
-configure_file(kipiplugin_facebook.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_facebook.desktop)
+configure_file(kipiplugin_facebook.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_facebook.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_facebook.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_facebook                                     DESTINATION ${PLUGIN_INSTALL_DIR})
