--- a/PORT.KF5/yandexfotki/CMakeLists.txt
+++ b/PORT.KF5/yandexfotki/CMakeLists.txt
@@ -34,7 +34,7 @@ target_link_libraries(kipiplugin_yandexfotki
                       KF5kipiplugins
                      )
 
-configure_file(kipiplugin_yandexfotki.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_yandexfotki.desktop)
+configure_file(kipiplugin_yandexfotki.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_yandexfotki.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_yandexfotki.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_yandexfotki                                     DESTINATION ${PLUGIN_INSTALL_DIR})
