--- a/timeadjust/CMakeLists.txt
+++ b/timeadjust/CMakeLists.txt
@@ -31,7 +31,7 @@ target_link_libraries(kipiplugin_timeadjust
                       KF5kipiplugins
 )
 
-configure_file(kipiplugin_timeadjust.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_timeadjust.desktop)
+configure_file(kipiplugin_timeadjust.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_timeadjust.desktop)
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_timeadjust.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_timeadjust                                     DESTINATION ${PLUGIN_INSTALL_DIR})
