flashexport tool compile and link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,7 +342,7 @@ if(KF5Kipi_FOUND)
          add_subdirectory(kmlexport)
          add_subdirectory(sendimages)
          add_subdirectory(timeadjust)
-#         add_subdirectory(flashexport)
+         add_subdirectory(flashexport)
 #         add_subdirectory(metadataedit)
 #         add_subdirectory(expoblending)
 #
