--- a/PORT.KF5/TODO/dngconverter/icons/CMakeLists.txt
+++ b/PORT.KF5/TODO/dngconverter/icons/CMakeLists.txt
@@ -4,4 +4,4 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-ecm_install_icons( ${ICON_INSTALL_DIR} )
+ecm_install_icons( ICONS hi128-apps-kipi-dngconverter.png  hi16-apps-kipi-dngconverter.png  hi22-apps-kipi-dngconverter.png  hi32-apps-kipi-dngconverter.png  hi48-apps-kipi-dngconverter.png  hi64-apps-kipi-dngconverter.png DESTINATION ${ICON_INSTALL_DIR} )
