--- a/flashexport/data/CMakeLists.txt
+++ b/flashexport/data/CMakeLists.txt
@@ -4,8 +4,8 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-install(FILES data/space.png       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport/simpleviewer_html)
-install(FILES data/index.template  DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
-install(FILES data/index2.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
-install(FILES data/index3.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
-install(FILES data/index4.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
+install(FILES space.png       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport/simpleviewer_html)
+install(FILES index.template  DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
+install(FILES index2.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
+install(FILES index3.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
+install(FILES index4.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_flashexport)
