--- a/PORT.KF5/TODO/gpssync/tests/CMakeLists.txt
+++ b/PORT.KF5/TODO/gpssync/tests/CMakeLists.txt
@@ -4,38 +4,38 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-KDE4_ADD_EXECUTABLE(gpssync_test_correlator
+add_executable(gpssync_test_correlator
                     test_correlator.cpp
                     ../track_correlator.cpp
                     ../track_correlator_thread.cpp
                    )
 
 target_link_libraries(gpssync_test_correlator
-                        ${KDE4_KDECORE_LIBS}
-                        ${QT_QTTEST_LIBRARY}
-                        ${QT_QTGUI_LIBRARY}
-                        ${QT_QTXML_LIBRARY}
+                        KF5::KDELibs4Support
+                        Qt5::Test
+                        Qt5::Gui
+                        Qt5::Xml
                         ${KGEOMAP_LIBRARIES}
                         KF5kipiplugins
                      )
 
 if(NOT WIN32)
 
-    KDE4_ADD_EXECUTABLE(gpssync_test_rgparsing
+    add_executable(gpssync_test_rgparsing
                test_rgparsing.cpp
                )
 
     target_link_libraries(gpssync_test_rgparsing
-                          ${KDE4_KDECORE_LIBS}
-                          ${QT_QTTEST_LIBRARY}
-                          ${QT_QTGUI_LIBRARY}
+                          KF5::KDELibs4Support
+                          Qt5::Test
+                          Qt5::Gui
                           ${KGEOMAP_LIBRARIES}
                           KF5kipiplugins
                          )
 
 endif()
 
-KDE4_ADD_EXECUTABLE(gpssync_test_rgtagmodel
+add_executable(gpssync_test_rgtagmodel
                     test_rgtagmodel.cpp
                     simpletreemodel/simpletreemodel.cpp
                     ../borrowed/modeltest.cpp
@@ -43,14 +43,14 @@ KDE4_ADD_EXECUTABLE(gpssync_test_rgtagmodel
                     )
 
 target_link_libraries(gpssync_test_rgtagmodel
-                      ${KDE4_KDECORE_LIBS}
-                      ${QT_QTTEST_LIBRARY}
-                      ${QT_QTGUI_LIBRARY}
+                      KF5::KDELibs4Support
+                      Qt5::Test
+                      Qt5::Gui
                       ${KGEOMAP_LIBRARIES}
                       KF5kipiplugins
                     )
 
-KDE4_ADD_EXECUTABLE(gpssync_test_kipiimageitem
+add_executable(gpssync_test_kipiimageitem
                     test_kipiimageitem.cpp
                     ../kipiimageitem.cpp
                     ../kipiimagemodel.cpp
@@ -58,13 +58,13 @@ KDE4_ADD_EXECUTABLE(gpssync_test_kipiimageitem
                    )
 
 target_link_libraries(gpssync_test_kipiimageitem
-                      ${KDE4_KDECORE_LIBS}
-                      ${KDE4_KDEUI_LIBS}
-                      ${QT_QTTEST_LIBRARY}
-                      ${QT_QTGUI_LIBRARY}
-                      ${KEXIV2_LIBRARIES}
+                      KF5::KDELibs4Support
+                      
+                      Qt5::Test
+                      Qt5::Gui
+                      KF5::KExiv2
                       ${KGEOMAP_LIBRARIES}
-                      ${KIPI_LIBRARIES}
+                      KF5::Kipi
                       KF5kipiplugins
                      )
 
@@ -73,4 +73,4 @@ add_test(gpssync_test_gpsrgparsing     ${EXECUTABLE_OUTPUT_PATH}/gpssync_test_rg
 add_test(gpssync_test_gpsrgtagmodel    ${EXECUTABLE_OUTPUT_PATH}/gpssync_test_rgtagmodel)
 add_test(gpssync_test_gpskipiimageitem ${EXECUTABLE_OUTPUT_PATH}/gpssync_test_kipiimageitem)
 
-MACRO_OPTIONAL_ADD_SUBDIRECTORY(simpletreemodel)
+ecm_optional_add_subdirectory(simpletreemodel)
