--- a/PORT.KF5/TODO/imageviewer/CMakeLists.txt
+++ b/PORT.KF5/TODO/imageviewer/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(kipiplugin_imageviewer MODULE ${kipiplugin_imageviewer_PART_SRCS})
 target_link_libraries(kipiplugin_imageviewer
                       KF5::Parts
                       
-                      ${QT_QTOPENGL_LIBRARY}
+                      Qt5::OpenGL
                       ${OPENGL_LIBRARIES}
                       KF5::Kipi
                       KF5::KExiv2
